add header banner and nav to html and css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
   <link rel='icon' href="./resources/images/logo.png" type="image/gif">
   </head>
   <body>
+
+  	<!-- HEADER SECTION -->
+
+  	<header>
+  		<div class="container">
+  			<div id="logo">
+  				<img src="./resources/images/logo.png">
+  			</div>
+  			<div id="logo_text">
+  				<p>SECRET AGENT SUPPLY INC.</p>
+  			</div>
+  		</div>
+  	</header>
+
+  	<!--BANNER SECTION-->
+
+  	<div class="banner">
+  		<div class="container">
+  			<div id="banner_title">
+  				<p>NEW ARRIVAL</p>
+  				<h2>SPORT BIKES AND MOTORCYCLES</h2>
+  			</div>
+  		</div>
+  	</div>
   
+  	<!--NAVIGATION SECTION-->
+
+  	<nav>
+  		<div class="container">
+  			<span><a href="#">Eyewear</a></span>
+  			<span><a href="#">Apparel</a></span>
+  			<span><a href="#">Gadgets</a></span>
+  			<span><a href="#">Vehicles</a></span>
+  			<span><a href="#">Classes</a></span>
+  			<span><a href="#">Contact</a></span>
+  		</div>
+  	</nav>
+
+  	<!--MAIN SECTION-->
+  	<div class="main">
+  		<div class="container">
+  			<div id="product_grid">
+  				<div id="item1">
+  					<img src="./resources/images/pen.png">
+  				</div>
+  				<div id="item2">
+  				</div>
+  				<div id="item3">
+  				</div>
+  			</div>
+  			<div id="details">
+  			</div>
+  		</div>
+  	</div>
+
   </body>
 </html>
