--- a/index.html
+++ b/index.html
@@ -50,18 +50,58 @@
   	<div class="main">
   		<div class="container">
   			<div id="product_grid">
-  				<div id="item1">
-  					<img src="./resources/images/pen.png">
+  				<div class="item">
+  					<div id="pen">
+  						<div class="box">
+  							<img src="./resources/images/pen.png">
+  						</div>
+  						<p>Exploding Pen</p>
+  					</div>
   				</div>
-  				<div id="item2">
+  				<div class="item">
+  					<div id="watch">
+  						<div class="box">
+  							<img src="./resources/images/watch.png">
+  						</div>
+  						<p>Cellular Watch</p>
+  					</div>
   				</div>
-  				<div id="item3">
+  				<div class="item">
+  					<div id="glasses">
+  						<div class="box">
+  							<img src="./resources/images/glasses.png">
+  						</div>
+  						<p>Thermal Glasses</p>
+  					</div>
   				</div>
   			</div>
   			<div id="details">
+  				<div class="detail_box">
+  					<div class="top">
+  						<p>Location</p>
+  					</div>
+  					<div class="bottom">
+  						<p>-47.346436, 84.32354</p>
+  					</div>
+  				</div>
+  				<div class="detail_box">
+  					<div class="top">
+  						<p>Hours</p>
+  					</div>
+  					<div class="bottom">
+  						<p>0800-1800</p>
+  					</div>
+  				</div>
   			</div>
   		</div>
   	</div>
+
+  	<!--FOOTER SECTION -->
+
+  	<footer>
+  		<div class="container">
+  			<p>Copyright Secret Agent Supply Inc.</p>
+  		</div>
 
   </body>
 </html>
