--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   	<!--NAVIGATION SECTION-->
 
-  	<nav>
+  	<nav id="nav1">
   		<div class="container">
   			<span><a href="#">Eyewear</a></span>
   			<span><a href="#">Apparel</a></span>
@@ -46,28 +46,35 @@
   		</div>
   	</nav>
 
+  	<nav id="nav2">
+  		<div class="container">
+  			<span><a href="#">Menu</a></span>
+  		</div>
+  	</nav>
+  	
+
   	<!--MAIN SECTION-->
   	<div class="main">
   		<div class="container">
   			<div id="product_grid">
-  				<div class="item">
-  					<div id="pen">
+  				<div class="item" id="pen">
+  					<div>
   						<div class="box">
   							<img src="./resources/images/pen.png">
   						</div>
   						<p>Exploding Pen</p>
   					</div>
   				</div>
-  				<div class="item">
-  					<div id="watch">
+  				<div class="item" id="watch">
+  					<div>
   						<div class="box">
   							<img src="./resources/images/watch.png">
   						</div>
   						<p>Cellular Watch</p>
   					</div>
   				</div>
-  				<div class="item">
-  					<div id="glasses">
+  				<div class="item" id="glasses">
+  					<div>
   						<div class="box">
   							<img src="./resources/images/glasses.png">
   						</div>
